# aida-tutor

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  metadata.yaml  oplog.yaml
.aida/: config.toml  dispenser.toml  mcp-cache.yaml  node.toml
.claude/: AIDA.md
.claude/commands/: aida-architecture.md  aida-code-review.md  aida-commit.md  aida-compiler-warnings.md  aida-decompose.md  aida-doc.md  aida-docs-review.md  aida-docs.md  aida-drain-queue.md  aida-evaluate.md  aida-glossary.md  aida-grill.md  aida-import-plan.md  aida-onboard.md  aida-pickup.md  aida-plan.md  aida-pr.md  aida-queue.md  aida-rebase.md  aida-release.md  aida-review.md  aida-search.md  aida-sprint.md  aida-standup.md  aida-status.md  aida-sync.md  aida-test.md  aida-triage.md
.claude/hooks/: aida-role-context.sh
.claude/skills/: aida-architecture.md  aida-capture.md  aida-pr.md  (+28 more)
content/: 01-init.md  02-vision.md  03-principle.md  04-decision.md  05-feature.md  06-bug.md  07-list.md  08-show.md  09-in-progress.md  10-trace-comment.md  11-aida-commit.md  12-docs-build.md  13-search.md  14-complete.md  15-show-comments.md  16-status.md  17-push.md  18-distributed-store.md  19-store-sync.md  20-cache-rebuild.md  21-role-enter.md  22-queue-add.md  23-queue-pickup.md  24-queue-done.md  25-add-parent.md  26-rel-add.md  27-session-start.md  28-session-work.md  29-session-leases.md  30-session-end.md  31-commit-pair-trailer.md  32-review-prompt.md  33-plan-verify.md  34-store-audit.md  35-mcp-serve.md
docs/: 2026-05-18-advisor-handoff.md  2026-05-19-onboarding-human-test.md
registry/: blocks.yaml  nodes.toml
src/: exercise.rs  main.rs  onboarding.rs  progress.rs  verify.rs
(+142 files in other folders)
